Fix overflow bug on home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
 html,
 body {
     height: 100%;
+    overflow-x: hidden;
 }
 
 /* Fixed bug for blank space https://www.quora.com/Why-do-I-have-random-white-space-appearing-to-the-right-of-the-web-page-outside-of-body-tags */
@@ -117,7 +118,7 @@ p {
  https://www.w3schools.com/howto/howto_css_images_side_by_side.asp */
 
 .hero-about {
-    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url('../images/lion_3.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url('../images/wide_lion.png');
     height: 600px;
     width: 100%;
     overflow: hidden;
@@ -157,7 +158,7 @@ p {
 }
 
 .hero-activities {
-    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url('../images/wide_zebra_pair.png');
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url('../images/giraffe.png');
     height: 600px;
     width: 100%;
     overflow: hidden;
@@ -181,7 +182,7 @@ p {
 /* welcome section */
 
 .welcome-container {
-    height: 1200px;
+    height: 700px;
     width: 100%;
     background-color: #111;
 }
@@ -202,6 +203,8 @@ p {
 
 .iframe {
     border: 5px solid #04AA6D;
+    height: 500px;
+    width: 750px;
 }
 
 .welcome-title {
@@ -217,10 +220,12 @@ p {
 
 .gallery-row {
     display: flex;
+    width: 100%;
     margin: auto;
     border-top: 2px solid #FE6B00;
     border-bottom: 2px solid #FE6B00;
     background: #000;
+    padding: 5px 0;
 }
 
 .gallery-col {
@@ -231,6 +236,8 @@ p {
 
 .gallery-image {
     border-radius: 10%;
+    width: 300px;
+    height: 300px;
 }
 
 /* reasons section ideas from CI */
